# IFC_processor_01

./: .gitignore  README.md  app.py  auth.py  ifc_processor.py  main.py  models.py  pyproject.toml  routes.py
instance/: app.db
static/css/: custom.css
static/js/: upload.js
templates/: base.html  login.html  main.html  result_detail.html  results.html  signup.html
uploads/: 20241102_2.ifc
