[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf==0.15.1",
    "flask==2.0.1",
    "flask-sqlalchemy==2.5.1",
    "gunicorn==20.1.0",
    "psycopg2-binary>=2.9.10",
    "flask-login==0.5.0",
    "ifcopenshell>=0.8.1.post1",
    "sqlalchemy==1.4.41",
    "werkzeug==2.0.3",
]
